check right privileges batch actions and code cleanup